fix: overflow

--- a/components/interactables/QuickProfile/QuickProfile.less
+++ b/components/interactables/QuickProfile/QuickProfile.less
@@ -24,15 +24,7 @@
 
     .text-container {
       flex-grow: 1;
-      box-sizing: border-box;
-      overflow-x: clip;
-
-      .font-body,
-      .font-heading {
-        text-overflow: ellipsis;
-        overflow: hidden;
-        white-space: nowrap;
-      }
+      overflow: hidden;
     }
 
     > *:not(.text-container) {
